# vocabulous

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
benchmarks/: bench_dict_accumulation.py  bench_dict_accumulation_integrated.py  bench_scoring.py  benchmark.md  benchmark_output.txt  benchmark_vocabulous.py  parallel_training_report.md  run_sentence_expansion.py  train_parallel_compare.py
dtp_quest/: main.ipynb
examples/: vocabulous_demo.ipynb
scripts/: publish.py  publish.sh
src/vocabulous/: __init__.py  vocabulous.py
tests/: test_vocabulous.py
